--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <footer>
         <p>Desenvolvido por Professora Andreia</p>
     </footer>
+    <script type="module" src="graficos/InformacoesGlobais.js"></script>
     
 </body>
 </html>
