--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Ciência de dados</title>
+    <title>Dados Globais sobre Esportes</title>
 </head>
 <body>
     <header>
-        <h1>Relatório das redes sociais</h1>
+        <h1>Relatório de dados globais sobre Esportes</h1>
         <nav>
             <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
@@ -16,13 +16,19 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <!-- crie os gráficos aqui -->
+            <!--<p class="graficos-container__texto">
+                Já parou para pensar que somos no mundo mais de 7 bilhões de pessoas??
+                Com tantos esportes e novas maneiras de se movimentar, o tempo médio semanal praticando esportes é de 2 horas.
+                Embora o número total de pessoas que praticam regularmente seja de cerca de 3 bilhões, eles perdem para os praticantes
+                da "apreciação do esporte", os quais somam quase 5 bilhões, que acreditam que podem queimar calorias apenas torcendo
+                pelo time, como se vibrar na frente da TV contasse como treino, afinal, quem precisa de academia quando se tem o sofá
+                como melhor amigo?
+            </p>-->
         </section>
     </main>
     <footer>
-        <p>Desenvolvido por Professora Andreia</p>
+        <p>Desenvolvido por Andreia Martins - Formadores 2024 - J3</p>
     </footer>
-    <script type="module" src="graficos/InformacoesGlobais.js"></script>
-    
+    <script type="module" src="graficos/informacoesGlobais"></script>
 </body>
 </html>
